# ohmygpu

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
cli/: Cargo.toml  build.rs
cli/src/: daemon.rs  gpu.rs  main.rs
cli/src/commands/: chat.rs  config.rs  generate.rs  mcp.rs  mod.rs  model_gc.rs  model_info.rs  models.rs  pull.rs  remove.rs  run.rs  search.rs  serve.rs  status.rs  stop.rs  update.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  models.rs  registry.rs
crates/core/src/downloaders/: huggingface.rs  mod.rs
crates/runtimes/runtime_api/: Cargo.toml
crates/runtimes/runtime_api/src/: lib.rs
crates/runtimes/runtime_candle/: Cargo.toml
crates/runtimes/runtime_candle/src/: lib.rs  model.rs  sampling.rs
crates/runtimes/runtime_diffusion/: Cargo.toml
crates/runtimes/runtime_diffusion/src/: lib.rs  zimage.rs
daemon/: Cargo.toml
daemon/src/: lib.rs  server.rs  state.rs
daemon/src/api/: chat.rs  mod.rs  models.rs  ollama.rs
docs/: PRD.md  architecture.md  models.md  z-image.md
mcp/: Cargo.toml
mcp/src/: main.rs
src/: main.rs
src/cli/: list.rs  mod.rs  pull.rs  remove.rs  run.rs  search.rs
src/downloaders/: github.rs  huggingface.rs  mod.rs
src/models/: mod.rs  registry.rs
src/runners/: llama.rs  mod.rs
src/tui/: app.rs  mod.rs  ui.rs
