[package]
name = "ohmygpu"
version = "0.1.0"
edition = "2024"
description = "Download and run AI models locally"
license = "MIT"

[[bin]]
name = "omg"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for downloading
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Progress and utilities
indicatif = "0.17"
futures-util = "0.3"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
