[package]
name = "ohmygpu_mcp"
description = "MCP server for ohmygpu - expose local AI models to Claude and other MCP clients"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ohmygpu-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.12", features = ["server", "macros", "transport-io"] }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
schemars = "1.2.0"
