[package]
name = "ohmygpu_core"
description = "Core library for ohmygpu - model management, downloads, registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures-util.workspace = true
indicatif.workspace = true
directories.workspace = true
chrono.workspace = true
tracing.workspace = true
toml.workspace = true
