[package]
name = "ohmygpu_runtime_api"
description = "Runtime API traits and types for ohmygpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ohmygpu_core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
