[package]
name = "ohmygpu_runtime_candle"
description = "Candle-based inference runtime for ohmygpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ohmygpu_core.workspace = true
ohmygpu_runtime_api.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true

# Candle inference
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.20"
hf-hub = "0.3"
