[package]
name = "ohmygpu_runtime_candle"
description = "Candle-based inference runtime for ohmygpu"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dependencies]
ohmygpu_core.workspace = true
ohmygpu_runtime_api.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true

# Candle inference
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
tokenizers.workspace = true
hf-hub.workspace = true
